<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="found_gotify_version">Found Gotify %s</string>
    <string name="version_failed_status_code">Request to \'%1$s\' failed with status code %2$d</string>
    <string name="version_failed">Request to \'%1$s\' failed. %2$s.</string>
    <string name="wronguserpw">There is no user with this username and password</string>
    <string name="create_client_title">Client Name</string>
    <string name="create_client_message">Choose a name for your session</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="create_client_failed">Create client failed</string>
    <string name="created_client">Created client</string>
    <string name="title_activity_logs">Logs</string>
    <string name="retry">Retry</string>
    <string name="logout">Logout</string>
    <string name="oops">Oops</string>
    <string name="not_available">Cannot connect to %s</string>
    <string name="auth_failed">Server returned 401 unauthorized while trying to get current user. This can be caused by deleting the client for this session.</string>
    <string name="other_error">Could not get current user. Server (%1$s) responded with code %2$d: body (first 200 chars): %3$s</string>
    <string name="user_action">User action required</string>
    <string name="websocket_closed_logout">Please login, the authentication token isn\'t valid anymore.</string>
    <string name="websocket_closed">Connection closed</string>
    <string name="grouped_message">Received %d messages while being disconnected</string>
    <string name="delete_all">Delete all messages</string>
    <string name="delete_app">Delete application</string>
    <string name="delete_app_not_supported">Deleting applications is not currently supported. Use the WebUI.</string>
    <string name="delete_logs">Delete logs</string>
    <string name="copy_logs">Copy logs</string>
    <string name="logs_copied">Logs copied</string>
    <string name="snackbar_deleted">Message deleted</string>
    <string name="snackbar_undo">Undo</string>
    <string name="all_messages">All Messages</string>
    <string name="logs">Logs</string>
    <string name="message_image_desc">The image of a message</string>
    <string name="delete_message">Delete message</string>
    <string name="gotify_url">Gotify URL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="disabled_validate_ssl">Disable SSL Validation</string>
    <string name="select_ca_certificate">Select CA Certificate</string>
    <string name="select_client_certificate">Select Client Certificate (PKCS#12)</string>
    <string name="select_ca_file">Select a CA Certificate File</string>
    <string name="select_client_file">Select a Client Certificate File</string>
    <string name="client_cert_password">Certificate Password</string>
    <string name="client_cert_password_missing">Password required</string>
    <string name="please_install_file_browser">Please install a file browser</string>
    <string name="select_ca_failed">Failed to read CA cert: %s</string>
    <string name="select_client_failed">Failed to read client cert: %s</string>
    <string name="certificate_found">Certificate found</string>
    <string name="login">Login</string>
    <string name="login_with_oidc">Login with OIDC</string>
    <string name="or">or</string>
    <string name="oidc_authorize_failed">Failed to start OIDC login</string>
    <string name="oidc_token_exchange_failed">OIDC login failed</string>
    <string name="check_url">Check URL</string>
    <string name="permissions_dialog_grant">Grant</string>
    <string name="permissions_notification_denied_temp">Gotify requires permission to display push notifications.</string>
    <string name="permissions_notification_denied_permanent">Gotify requires permission to display push notifications. Please grant the required permission in the settings.</string>
    <string name="permissions_alarm_prompt">Gotify requires permission to schedule reconnecting after connection is lost.</string>
    <string name="gotify_logo">Gotify logo</string>
    <string name="refresh_all">Refresh all</string>
    <string name="logout_confirm">Do you really want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ack">Are you sure?</string>
    <string name="missed_messages">Missed messages</string>
    <string name="grouped_notification_text">New Messages</string>
    <string name="websocket_listening">Connected</string>
    <string name="websocket_init">Initializing</string>
    <string name="versions">gotify/android v%1$s; gotify/server v%2$s</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="done">Done</string>
    <string name="no_certificate_selected">No certificate selected</string>
    <string name="remove_ca_certificate">Remove CA Certificate</string>
    <string name="remove_client_certificate">Remove Client Certificate</string>
    <string name="warning">Warning</string>
    <string name="http_warning">Using HTTP is insecure and it\'s recommend to use HTTPS instead. Use your favorite search engine to get more information about this topic.</string>
    <string name="i_understand">I Understand</string>
    <string name="no_messages_yet">There are no messages, yet.\nSend a message to Gotify\nand it will appear here.</string>
    <string name="learn_gotify">Learn how to send messages</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_key_theme" translatable="false">theme</string>
    <string name="setting_message_layout">Message layout</string>
    <string name="setting_key_message_layout" translatable="false">message_layout</string>
    <string name="setting_restart_dialog_title">Restart App?</string>
    <string name="setting_restart_dialog_message">The change will be effective on next app start.\n\nDo you want to restart now?</string>
    <string name="setting_restart_dialog_button1">Restart</string>
    <string name="setting_restart_dialog_button2">Later</string>
    <string name="setting_time_format">Time format</string>
    <string name="setting_key_time_format" translatable="false">time_format</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_notification_channels">Separate app notification channels</string>
    <string name="setting_key_notification_channels" translatable="false">notification_channels</string>
    <string name="setting_key_exclude_from_recent" translatable="false">exclude_from_recent</string>
    <string name="setting_exclude_from_recent">Exclude from recents</string>
    <string name="setting_intent_dialog_permission">Intent Action Permission</string>
    <string name="setting_key_intent_dialog_permission" translatable="false">intent_dialog_permission</string>
    <string name="setting_summary_intent_dialog_permission">To always show incoming intent URLs, give permission to show this app on top of other apps.</string>
    <string name="setting_summary_intent_dialog_permission_granted">Permission granted.</string>
    <string name="setting_prompt_onreceive_intent">Confirm onReceive intents</string>
    <string name="setting_key_prompt_onreceive_intent" translatable="false">prompt_onreceive_intent</string>
    <string name="setting_summary_prompt_onreceive_intent">If enabled, a dialog is shown before onReceive.intentUrl is executed.</string>
    <string name="push_message">Push message</string>
    <string name="appListDescription">App:</string>
    <string name="priorityDescription">Priority:</string>
    <string name="push_button">Push Message</string>
    <string name="push_title_hint">Title</string>
    <string name="push_content_hint">Content</string>
    <string name="push_priority_hint">Priority</string>
    <string name="push_missing_app_info">There are no applications available on the server to push a message to.</string>
    <string name="message_copied_to_clipboard">Content copied to clipboard</string>
    <string name="not_loggedin_share">Cannot share to Gotify, because you aren\'t logged in.</string>
    <string name="action_dialog_missing">Missing URL</string>
    <string name="action_dialog_message">You have received a message with an intent url:</string>
    <string name="action_dialog_button_open">Open</string>
    <string name="action_dialog_button_cancel">Cancel</string>

    <string name="websocket_error">Error %s (see logs)</string>
    <string name="websocket_reconnect">Trying to reconnect in %s</string>
    <string name="setting_reconnect_delay">Reconnect Delay (Seconds)</string>
    <string name="setting_key_reconnect_delay" translatable="false">reconnect_delay</string>
    <string name="setting_connection">Connection</string>
    <string name="setting_reconnect_interval_summary">Delay between reconnect attempts</string>
    <string name="setting_exponential_backoff_title">Exponential Backoff</string>
    <string name="setting_exponential_backoff_summary">Exponentially increase the reconnect delay for each reconnect attempt</string>
    <string name="setting_key_exponential_backoff" translatable="false">reconnect_exponential_backoff</string>

    <string name="notification_channel_title_foreground">Gotify foreground notification</string>
    <string name="notification_channel_title_min">Min priority messages (&lt;1)</string>
    <string name="notification_channel_title_low">Low priority messages (1–3)</string>
    <string name="notification_channel_title_normal">Normal priority messages (4–7)</string>
    <string name="notification_channel_title_high">High priority messages (>7)</string>

    <string name="design_server_section">Connect to server</string>
    <string name="design_auth_section">Choose a sign-in method</string>
    <string name="design_server_hint">Enter the URL of your Gotify server, including https:// or http://.</string>
    <string name="design_server_verified">Server found</string>
    <string name="design_oidc_hint">Sign in using your server’s identity provider</string>
    <string name="design_login_intro">Connect to your messages</string>
    <string name="design_send_to">Send to</string>
    <string name="design_message_content">Message content</string>
    <string name="design_notification_priority">Notification priority</string>
    <string name="design_send_preview">Message preview</string>
    <string name="design_optional">Optional</string>
    <string name="design_required">Required</string>
    <string name="design_content_limit">%1$d / 2000</string>
    <string name="design_priority_help">0 is the default. The notification channel depends on your device settings.</string>
    <string name="design_search_logs">Search logs</string>
    <string name="design_search_loaded_messages">Search loaded messages</string>
    <string name="design_logs_original">Full log</string>
    <string name="design_logs_clear_confirm">Clear local logs?</string>
    <string name="design_logs_clear_description">This permanently removes the logs stored on this device.</string>
    <string name="design_confirm_clear">Clear logs</string>
    <string name="design_no_search_results">No matching results</string>
    <string name="design_app_source">Application</string>
    <string name="design_reconnect_seconds">%1$d seconds</string>
</resources>
